# Renderer

./: .gitignore  CMakeLists.txt  README.txt  generate_images.sh
animations/: image_gen.sh  scene_gen.py
animations/animation1_scenes/: scene0.txt  scene1.txt  scene10.txt  scene100.txt  scene101.txt  scene102.txt  scene103.txt  scene104.txt  scene105.txt  scene106.txt  scene107.txt  scene108.txt  scene109.txt  scene11.txt  scene110.txt  scene111.txt  scene112.txt  scene113.txt  scene114.txt  scene115.txt  scene116.txt  scene117.txt  scene118.txt  scene119.txt  scene12.txt  scene120.txt  scene121.txt  scene122.txt  scene123.txt  scene124.txt  scene125.txt  scene126.txt  scene127.txt  scene128.txt  (+326 more)
data/: cornell_box.txt  cornell_box_standard.txt  diamond.txt  dragon.txt  dragon_quad.txt  glass_bunny.txt  mirror_bunny.txt  multicolored_bunnies.txt  opaque_bunny.txt  prism.txt  scene06_bunny_1k.txt  scene07_arch.txt  scene08.txt  scene09_prism.txt  scene10_wineglass.txt  scene12_toon.txt  sphere.txt  sphere_mirror.txt  sphere_quad.txt  transparent_bunny.txt  wineglass.txt
final_report/: final_report_pwgreene.aux  final_report_pwgreene.out  final_report_pwgreene.tex  prelim.aux
include/KNN/: CMakeLists.txt  kdTree.cpp  kdTree.h  main.cpp
include/KNN/vecmath/: CMakeLists.txt
src/: ArgParser.cpp  ArgParser.h  Camera.cpp  Camera.h  Image.cpp  Image.h  Light.cpp  Light.h  Material.cpp  Material.h  Object3D.cpp  Object3D.h  Ray.h  Renderer copy.cp  Renderer.cpp  Renderer.h  SceneParser.cpp  SceneParser.h  main.cpp
submission/: a4  image_gen.sh  scene_gen.py
(+373 files in other folders)
